# axon

./: .gitignore  AGENTS.md  Cargo.toml  clippy.toml  deny.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
.agents/rules/: axon-rust-workspace.md
crates/axon-core/: Cargo.toml
crates/axon-core/src/: capability.rs  codec.rs  error.rs  lib.rs  session.rs
crates/axon-core/src/engine/: action.rs  event.rs  idempotency.rs  mod.rs  resumable.rs  traits.rs
crates/axon-core/src/frame/: mod.rs  payload.rs
specs/: 00-introduction.md  01-terminology.md  02-architecture.md  03-connection-lifecycle.md  04-message-framing.md  05-channel-semantics.md  06-error-handling-and-reconnection.md  07-security-considerations.md  08-implementation-notes.md  09-appendices.md  10-implementation-profile.md  README.md
